# FundamentosPacman

./: .gitignore  CMakeLists.txt
Assets/DragContentIntoModsToLoadThem/: InvincibilityMod.exp  InvincibilityMod.lib  SpeedBoostMod.exp  SpeedBoostMod.lib
Assets/Levels/: Level1.txt  LevelEditor.xlsx
Game/: CMakeLists.txt
Game/Include/: Game.h  GameOverUI.h  Ghost.h  HUD.h  Level.h  MainMenuUI.h  PacDot.h  PauseUI.h  Player.h  PlayerPacMan.h  ScoreBall.h
Game/Source/: Game.cpp  GameOverUI.cpp  Ghost.cpp  HUD.cpp  Level.cpp  MainMenuUI.cpp  PacDot.cpp  PauseUI.cpp  Player.cpp  PlayerPacMan.cpp  ScoreBall.cpp  main.cpp
GameFramework/: CMakeLists.txt
GameFramework/Include/: Actor.h  BoxColliderComponent.h  Component.h  Event.h  FrameworkPrerequisites.h  ModInfo.h  Module.h  PhysicsManager.h  PlayerBase.h  ResourceManager.h  Scene.h  SceneManager.h  ScoreManager.h  ScriptComponent.h  SpriteRendererComponent.h  Transform.h  UI.h
GameFramework/Source/: Actor.cpp  BoxColliderComponent.cpp  PhysicsManager.cpp  PlayerBase.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp  ScoreManager.cpp  ScriptComponent.cpp  SpriteRendererComponent.cpp  Transform.cpp  UI.cpp
InvincibilityMod/: CMakeLists.txt  InvincibilityMod.cpp
SpeedBoostMod/: CMakeLists.txt  SpeedBoostMod.cpp
